k8s/gateway.yaml
##################################################
## Gateway Service
##################################################

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
spec:
  ports:
    - name: http
      port: 5000
      targetPort: gateway-port
    - name: https
      port: 443
      targetPort: webhook-port
    # - name: admin
    #   port: 8080
    #   targetPort: admin-port
  selector:
    app: gateway
  type: ClusterIP

---
# Gateway Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: api-gateway
      containers:
        - name: gateway
          image: registry.gitlab.com/eco_system/gateway
          imagePullPolicy: IfNotPresent
          ports:
            - name: gateway-port
              containerPort: 5000
            - name: webhook-port
              containerPort: 8443
            # - name: admin-port
            #   containerPort: 8080

          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true

          livenessProbe:
            httpGet:
              path: /hz
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 120

      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls

      imagePullSecrets:
        - name: gitlab-auth

---
##################################################
## Gateway Webhook
##################################################

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gateway-webhook
  namespace: default
webhooks:
  - name: gateway-service.default.svc
    clientConfig:
      service:
        name: gateway-service
        namespace: default
        path: '/admission'
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNzRENDQVpnQ0NRRG0wcmxIbkdEMWdUQU5CZ2txaGtpRzl3MEJBUXNGQURBYU1SZ3dGZ1lEVlFRS0RBOW4KWVhSbGQyRjVMWE5sY25acFkyVXdIaGNOTWpFd056SXlNVFF6TVRFNFdoY05NekV3TnpJd01UUXpNVEU0V2pBYQpNUmd3RmdZRFZRUUtEQTluWVhSbGQyRjVMWE5sY25acFkyVXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCCkR3QXdnZ0VLQW9JQkFRQy9saXFDelNGQU9sSTRIKzVaTU9pWkQ2Y3U3K1IvMit4Y3BHVnBFM1FFR3FwM2FxZkcKSnhqVFRGckErNjNSd2cvUndKSm00S2hMQ2U5T1dLcTQ3NDZWU2tudDRCNE4vQ1k0R3Z6eG5odWxNdnV2L0s1RgppQUU5MkM0bUNt [...]
    rules:
      - operations: ['*']
        apiGroups: ['*']
        apiVersions: ['*']
        resources: ['services']
    admissionReviewVersions: [ "v1", "v1beta1" ]
    sideEffects: None
